--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,27 +8,40 @@ body{
 
 }
 .bg{
+	padding: 100px;
 	height: 100%;
 	width: 100%;
 	background-color: grey
+
 }
 
 .text{
 	color: white;
 	margin-bottom: 100px;
+	font-size: 45px;
+	margin-left: 650px;
 
 
 }
 .box{
 	background-color: green;
 	width: 610px;
-	height: 320px;
+	height: 343px;
+	display: inline-block;
+	margin-left: 270px;
+	vertical-align: top;
+	padding: 50px;
 
 }
-
+p{
+	font-size: 25px;
+	color: white;
+}
 .imgtext{
 	width: 610px;
-	height: 320px;
+	height: 343px;
+	display: inline-block;
+	vertical-align: top;
 }
 .img{
 	width: 100%;
