--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,7 +11,7 @@ body{
 	padding: 100px;
 	height: 100%;
 	width: 100%;
-	background-color: #7d536d;
+	background-color: #1b2f45;
 
 }
 
@@ -20,12 +20,12 @@ body{
 	margin-bottom: 100px;
 	font-size: 45px;
 	margin-left: 650px;
-	transition-duration: 6s;
+	transition-duration: 4s;
 
 }
 .text:hover{	
 	color: #c77980;
-	transition-duration: 6s;
+	transition-duration: 4s;
 }
 .box{
 	background-color: #324f72;
@@ -35,17 +35,20 @@ body{
 	margin-left: 270px;
 	vertical-align: top;
 	padding: 50px;
-	transition-duration: 6s;
+	transition-duration: 4s;
 
 }
 .box:hover{
 	background-color: #7d536d;
-	transition-duration: 6s;
+	transition-duration: 4s;
 }
-
-p{
+.box:hover .p{
+	transform: scale(0.9)
+}
+.p{
 	font-size: 25px;
 	color: white;
+	transition-duration: 4s;
 }
 .imgtext{
 	width: 610px;
@@ -65,13 +68,16 @@ p{
 	top: 150px;
 	left: 100px;
 	transition-duration: 2s;
+	font-size: 25px;
+	color:white;
 
 }
 
 .imgtext:hover .lorem{
-	color: #324f72;
+	color: #c77980;
 	transition-duration: 2s;
-	font-size: 26px;
+	/*font-size: 26px;*/
+	transform: scale(1.1)
 }
 .imgtext:hover .img{
 	opacity: 0.3;
